src/pages/Options/Home/MarketHeader/media.scss
.dapp-header {
    &__logoWrapper {
        display: none !important;
    }
}

@media screen and (max-width: 1024px) {
    .dapp-header {
        justify-content: space-between !important;
        padding-left: 0 !important;
        padding-right: 50px !important;

        &__nav {
            display: none;
            &--show {
                display: block;
                right: 0;
                left: unset !important;
                width: 256px !important;
                height: 100%;
                overflow: auto !important;
                &::-webkit-scrollbar {
                    width: 0px;
                }
                span {
                    display: block !important;
                }
            }
        }
        &__logoWrapper {
            display: flex !important;
            &__logo {
                height: 32px !important;
            }
        }
    }
}

@media screen and (max-width: 767px) {
    .dapp-header {
        height: 120px !important;
        padding-right: 0 !important;
        flex-direction: column;
        .dapp-header__logoWrapper__burger {
            right: 10px;
        }

        margin-top: 40px !important;
        &__logoWrapper {
            align-self: flex-start;
            &__burger {
                top: 44px !important;
            }
        }
    }
}

